src/test/deca/context/invalid/Obj/extends-inexistant.deca
// Description:
//    Déclaration d'une classe qui extends une classe non définie
//
// Résultat:
//La superclasse n'est pas définie
//
class A extends B {}
{}